# adcgl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  adcgl.h  main.cpp
src/graph/: CMakeLists.txt  DCGraph.cpp  DCGraph.h  GraphBuilder.cpp  GraphBuilder.h
src/graph/node/: CMakeLists.txt  Node.cpp  Node.h  NodeArray.cpp  NodeArray.h
src/graph/node/placeholder/: CMakeLists.txt  Placeholder.cpp  Placeholder.h
src/graph/node/sink/: CMakeLists.txt  Sink.cpp  Sink.h
src/graph/node/source/: CMakeLists.txt  Constant.cpp  Constant.h  Source.cpp  Source.h  Variable.cpp  Variable.h
src/graph/nodes/: CMakeLists.txt  Node.cpp  Node.h  NodeArray.cpp  NodeArray.h
src/graph/nodes/placeholders/: CMakeLists.txt  Placeholder.cpp  Placeholder.h
src/graph/nodes/sinks/: CMakeLists.txt  Sink.cpp  Sink.h
src/graph/nodes/sources/: CMakeLists.txt  Constant.cpp  Constant.h  Source.cpp  Source.h  Variable.h
src/graph/operator/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp  Div.h  Mul.cpp  Mul.h  Operator.cpp  Operator.h  Sub.cpp  Sub.h
src/graph/operator/elementwise/: Add.cpp  Add.h  Div.cpp  Div.h  Mul.cpp  Mul.h  Sub.cpp  Sub.h  Sum.h
src/graph/operator/loss/: MSE.cpp
src/graph/operator/matrix/: CMakeLists.txt  Dot.cpp  Dot.h  Outer.cpp  Outer.h
src/operators/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp  Div.h  Mul.cpp  Mul.h  Operator.cpp  Operator.h  Sub.cpp  Sub.h
src/tensor/: CMakeLists.txt  Shape.cpp  Shape.h  Tensor.cpp  Tensor.h  TensorArray.cpp  TensorArray.h
src/tensor/device/: DTensor.cuh  Device.h
src/tensor/devices/: CMakeLists.txt  Device.h  HostDevice.cpp  HostDevice.h
src/tensor/host/: CMakeLists.txt  HTensor.h
src/tensor/host/operators/: CMakeLists.txt  elementwise_ops.h
src/tensor/operator/: CMakeLists.txt  Operator.cpp  Operator.h  TensorOperator.cpp  TensorOperator.h  tensor_operators.h
src/tensor/operator/cpu/: CMakeLists.txt  matrix_ops.cpp  matrix_ops.h
src/tensor/operator/elementwise/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp  Div.h  Mul.cpp  Mul.h  Sub.cpp  Sub.h  Sum.cpp  Sum.h
src/tensor/operator/elementwise_operators/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp
src/tensor/operator/matrix/: CMakeLists.txt  Dot.cpp  Dot.h  Outer.cpp  Outer.h
src/tensor/operator/matrix_operators/: CMakeLists.txt
src/tensor/operators/: CMakeLists.txt  elementwise_ops.cpp  elementwise_ops.h  operators.h
src/tensor/tensor_operators/: CMakeLists.txt  tensor_operators.cpp
src/tensor/tensor_operators/cpu/: CMakeLists.txt
swing/: CMakeLists.txt  swing.cpp  swing.h
swing/common/: CMakeLists.txt  RefArray.h  common.h  exception.h
swing/graph/: CMakeLists.txt  DCGraph.cpp  DCGraph.h  GraphBuilder.cpp  GraphBuilder.h
swing/graph/node/: CMakeLists.txt  Node.cpp  Node.h  NodeArray.cpp  NodeArray.h
swing/graph/node/placeholder/: CMakeLists.txt  Placeholder.cpp  Placeholder.h
swing/graph/node/sink/: CMakeLists.txt  Sink.cpp  Sink.h
swing/graph/node/source/: CMakeLists.txt  Constant.cpp  Constant.h  Source.cpp  Source.h  Variable.cpp  Variable.h
swing/graph/operator/: CMakeLists.txt  MatrixOperator.cpp  MatrixOperator.h  Operator.cpp  Operator.h  ScalarOperator.cpp  ScalarOperator.h  VectorOperator.cpp  VectorOperator.h
swing/graph/operator/elementwise/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp  Div.h  Mul.cpp  Mul.h  Sub.cpp  Sub.h  Sum.cpp  Sum.h
swing/graph/operator/loss/: CMakeLists.txt  MSE.cpp  MSE.h
swing/graph/operator/matrix/: CMakeLists.txt  Dot.cpp  Dot.h  Outer.cpp  Outer.h
swing/tensor/: CMakeLists.txt  Shape.cpp  Shape.h  Tensor.cpp  Tensor.h  TensorArray.h  TensorData.cpp  TensorData.h  TensorStorage.cpp  TensorStorage.h
swing/tensor/device/: CMakeLists.txt  Device.cpp  HostDevice.h
swing/tensor/operator/: CMakeLists.txt  Operator.cpp  Operator.h
swing/tensor/operator/elementwise/: Add.cpp  Add.h  CMakeLists.txt  Div.cpp  Div.h  Mul.cpp  Mul.h  Reduce.cpp  Reduce.h  Square.cpp  Square.h  Sub.cpp  Sub.h  Sum.cpp  Sum.h
swing/tensor/operator/matrix/: CMakeLists.txt  Dot.cpp  Dot.h  Outer.cpp  Outer.h  TensorDot.cpp  TensorDot.h
tests/: CMakeLists.txt  brodcast_test.cpp  differentiation_test.cpp  main.cpp  node_test.cpp  node_test_2.cpp  operator_test.cpp  tensor_array_test.cpp
